Feat/api password reset (#183)
* feat(ui): добавить компоненты Popover, Alert, RadioGroup, TagInput и новые иконки

* feat(ui): add InputOTP component to UI package

* feat(ui): add TagInput and InputOTP UI components with documentation stories

* docs(email): add email service task documentation

* docs(role & admin): add task documentation for RBAC and admin panel features

* docs(task): add email service task documentation

* feat(api): реализовать сброс и восстановление пароля

* feat(api): implement authentication module, OpenAPI specification, and generated API client

* feat(api): add authentication module, database schema, and session revocation cron
